Fix margins to show borders in list view on mobile

--- a/src/flavors/cycle3/static/css/list-view-mobile.css
+++ b/src/flavors/cycle3/static/css/list-view-mobile.css
@@ -147,6 +147,11 @@
   #list-container .iia-content-container {
     background-image: none;
     background-color: white;
+    margin: 0 -1rem -2rem -1rem;
+  }
+
+  #list-container li:first-child .iia-content-container {
+    margin-top: -1rem;
   }
 
   #list-container .place-submission-details {
